# AI-First-CRM-HCP-Module

./: .gitattributes  .gitignore  Makefile  README.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 22ba47c4cd7c_initial_migration.py  64d4bd24dfd7_ddd_refactoring_models.py  e7c0809aa321_add_status_and_completed_at_to_.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/endpoints/: agent.py
backend/app/config/: settings.py
backend/app/core/: logger.py
backend/app/database/: registry.py  session.py
backend/app/domains/audit/: models.py  service.py
backend/app/domains/hcp/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/domains/interaction/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/exceptions/: __init__.py  base.py  handlers.py
backend/app/langgraph/: __init__.py  graph.py  nodes.py  prompts.py  state.py  tools.py
backend/app/llm/: factory.py
backend/app/middleware/: setup.py
backend/app/models/: base.py
backend/app/repositories/: base.py
backend/app/schemas/: common.py
backend/tests/: conftest.py  test_api.py  test_langgraph.py  test_repositories.py  test_services.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/app/store/: index.ts
frontend/src/hooks/: useDraftAutosave.ts
frontend/src/pages/: HCPHistoryPage.tsx  InteractionHomePage.tsx
frontend/src/types/: index.ts
(+10 files in other folders)
