[project]
name = "ai-first-crm-backend"
version = "0.1.0"
description = "AI-First Healthcare CRM Backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn>=0.30.0",
    "sqlalchemy>=2.0.35",
    "alembic>=1.13.3",
    "asyncpg>=0.29.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "langchain>=0.3.3",
    "langgraph>=0.2.20",
    "langchain-groq>=0.2.0",
    "redis>=5.0.8",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "tenacity>=9.0.0",
    "structlog>=26.1.0",
    "scalar-fastapi>=1.8.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.2",
    "ruff>=0.6.9",
    "mypy>=1.11.2",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = "."
